# xanderjakeq.page

./: .dockerignore  .gitignore  .prettierrc  CNAME  Cargo.toml  Dockerfile  Makefile.toml  README.md  fly.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  towebp.sh
css/: index.css
js/: index.js
less/: index.less
src/: lib.rs  main.rs  router.rs  server.js  startup.rs  template.html
src/handlers/: errors.rs  health_check.rs  index.rs  middlewares.rs  mod.rs
src/routes/: _layout.svelte  about.svelte  commissions.svelte  index.svelte  sketches.svelte
src/templates/: components.rs  mod.rs  pages.rs
static/: global.css  manifest.json
static/css/: global.css  input.css  tw.css
static/js/: htmx.js
templates/: base.html  error.html  index.html
templates/components/: about.html  art.html  artwork.html  carousel.html  dev.html  exp.html  thumbnail.html
